# practical-machine-learning-w-rust

./: LICENSE.txt  README.md
chapter1/simple-scripts/: conditions.rs  enumerations.rs  functions.rs  match.rs  oops.rs  ownership1.rs  ownership2.rs  ownership3.rs  ownership4.rs  ownership5.rs  variables.rs  variables1.rs  variables2.rs  variables3.rs  variables4.rs  variables5.rs
chapter1/simple-scripts/unittestingexample/: Cargo.toml
chapter2/: chapter2.bib  chapter2.tex  chapter2_classfication.bib  chapter2_classfication.tex  chapter2_regression.bib  chapter2_regression.tex  chapter2_unsupervised_learning.tex  svm_visualisation.ipynb
chapter2/iris_classification_tchrs/: Cargo.toml
chapter2/iris_classification_tchrs/src/: linear_with_sgd.rs  main.rs  simple_nn.rs
chapter2/iris_classification_xgboost/: Cargo.toml
chapter2/iris_classification_xgboost/src/: main.rs
chapter2/kmeans_rusty_machine/: Cargo.toml
chapter2/kmeans_rusty_machine/src/: main.rs
chapter2/logistic_regression_rustlearn/: Cargo.toml
chapter2/logistic_regression_rustlearn/src/: main.rs
chapter2/ml-utils/: Cargo.toml  calc_prob.py  clusim stuff.ipynb  easy_bayesian_AB.py
chapter2/ml-utils/examples/: measures.rs
chapter2/ml-utils/src/: lib.rs  (+5 more)
chapter2/nb_classification/: Cargo.toml
chapter2/rust_and_tf/: Cargo.toml  fullcode.ipynb  tensorflow create model.ipynb
chapter2/rust_and_tf/src/: conv_nets.rs  conv_nets_maxpooling.rs  graph_variables.rs  graph_with_placeholder.rs  linear_regression.rs  linear_regression_from_model.rs  main.rs  seq_nodes.rs
chapter2/rustlearn_classification_tasks/: Cargo.toml
chapter2/rusty_machine_classification/: Cargo.toml
chapter2/rusty_machine_supervised_algos/: Cargo.toml
chapter2/rustymachine_regression/: Cargo.toml
chapter3/: chapter3.bib  chapter3.tex
chapter3/reinforcement-learning-frozenlake/: Cargo.toml
chapter3/rsrl_custom/: Cargo.toml
chapter3/rusty_machine_unsupervised/: Cargo.toml
chapter3/rusty_machine_unsupervised/src/: main.rs
chapter4/: data_processing.bib  data_processing.tex
chapter4/SQL_db/: Cargo.toml
chapter4/data_formats/: Cargo.toml
chapter4/data_transformations_datafusion/: Cargo.toml
chapter4/databases/: Cargo.toml
chapter4/graph_db/: Cargo.toml
chapter4/matrix_transformations/: Cargo.toml
chapter4/s3_files/: Cargo.toml
chapter4/s3_files/src/: main.rs
chapter4/scraping/: Cargo.toml
chapter5/: data_processing.tex  natural_language_processing.tex
chapter5/crfsuite-model/: Cargo.toml
chapter5/fasttext-model/: Cargo.toml
chapter5/fasttext-model/src/: main.rs
chapter5/jigsaw/: Cargo.toml  references.txt
chapter5/jigsaw/src/: main.rs
chapter5/snips-model/: Cargo.toml  snips_training.md
chapter5/snips-model/src/: main.rs
chapter6/: computer_vision.aux  computer_vision.bib  computer_vision.out  computer_vision.run.xml  computer_vision.tex
chapter6/adversarial/: Cargo.toml
chapter6/face-detection-tf/: Cargo.toml
chapter6/finetuning_pytorch_image_models/: Cargo.toml  README.md  resnet.py
chapter6/model_inference/: Cargo.toml
chapter6/pytorch-image-classification/: Cargo.toml
chapter6/pytorch-image-classification/src/: main.rs
chapter7/: others-blx.bib  others.aux  others.bib  others.out  others.tex
chapter7/goodbooks-recommender/: Cargo.toml
chapter7/high-performance-computing/: Cargo.toml
chapter7/high-performance-computing/src/: main.rs
chapter7/output/: others.aux  others.run.xml
chapter7/statistics/: Cargo.toml
chapter8/: .using_rust_applications.tex.swp  using_rust_applications.bib  using_rust_applications.tex
chapter8/cpp_demangle/: Cargo.toml  mangle_ex.py  setup.py
chapter8/crfsuite-model/: Cargo.toml  crfsuite_model_prediction.py  crfsuite_model_training.py  setup.py
chapter8/crfsuite-model/crfsuite_model/: __init__.py
chapter8/crfsuite-model/data/: ner.csv  ner_predict.csv
chapter8/crfsuite-model/src/: lib.rs
chapter8/iris_classification_xgboost/: IrisClassificationXgboost.java  Makefile
chapter8/iris_classification_xgboost/iris_classification_library/: Cargo.toml
chapter8/iris_classification_xgboost/iris_classification_library/src/: lib.rs
chapter8/my_lambda_function/: Cargo.toml  buildthis.sh
chapter8/output/: using_rust_applications.aux  using_rust_applications.out  using_rust_applications.run.xml
(+37 files in other folders)
