[package]
name = "rusty_machine_unsupervised"
version = "0.1.0"
authors = ["joydeep bhattacharjee <joydeepubuntu@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1.1"
#rusty-machine="0.5.4"
rusty-machine= { path = "../rusty-machine" }
serde = "1"
serde_derive = "1"
rand = "0.7.0"
ml-utils = { path = "../../chapter2/ml-utils" }