[package]
name = "fasttext-model"
version = "0.1.0"
authors = ["Joydeep Bhattacharjee <joydeepubuntu@gmail.com>"]
edition = "2018"

[dependencies]
# data reading and organisation
csv = "1.0.7"
serde = "1"
serde_derive = "1"
rand = "0.6.5"

# machine learning
fasttext = "0.4.1"

# text normalisation
stopwords = "0.1.0"
vtext = "0.1.0-alpha.1"
rust-stemmers = "1.1.0"

# others
itertools = "0.8.0"