[package]
name = "crfsuite-model"
version = "0.2.0"
authors = ["Joydeep Bhattacharjee <joydeepubuntu@gmail.com>"]
edition = "2018"

[dependencies]
# data reading and organisation
csv = "1.0.7"
serde = "1"
serde_derive = "1"
rand = "0.6.5"

# machine learning
crfsuite = "0.2.6"

# to call from python
pyo3 = { git = "https://github.com/PyO3/pyo3.git", rev = "99fdafbb880c181f4bce16bbbac03888b3cf85c8", features = ["extension-module"]}

[lib]
name = "crfsuite_model"
crate-type = ["cdylib"]