[package]
name = "iris_classification_xgboost"
version = "0.1.0"
authors = ["joydeep bhattacharjee <joydeepubuntu@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.0.7"
serde = "1.0.92"
serde_derive = "1.0.92"
rand = "0.6"
xgboost = "0.1.4"
ml-utils = { path = "../../../chapter2/ml-utils" }
jni = "0.12.3"


[lib]
name = "iris_classification_xgboost"
crate-type = ["cdylib"]